[tool.poetry]
name = "wrdyl"
version = "0.1.0"
description = "A python clone of Wordle to play in the terminal."
authors = ["mhurhangee <m.hurhangee@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.52.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
